Update Example folder for Internal Demo (#469)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
<!-- Explain here the context and why you're making the change. What is
the problem you're trying to solve. --->

- I have fixed some example that not working
- Add Custom Model using fastapi python



**Which issue(s) this PR fixes**:
<!--
*Automatically closes linked issue when PR is merged.
Usage: `Fixes #<issue number>`, or `Fixes (paste link of issue)`.
-->

Fixes #

**Does this PR introduce a user-facing change?**:
<!--
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/community/contributors/guide/release-notes.md
-->

```release-note

```

**Checklist**

- [ ] Added unit test, integration, and/or e2e tests
- [ ] Tested locally
- [ ] Updated documentation
- [ ] Update Swagger spec if the PR introduce API changes
- [ ] Regenerated Golang and Python client if the PR introduce API
changes

--- a/examples/custom-model/fastapi/custom-model.ipynb
+++ b/examples/custom-model/fastapi/custom-model.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "88acfbf4",
    "metadata": {},
    "source": [
-    "# SKLearn Sample"
+    "# Custom Model Sample"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1c7f43f1",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -18,68 +20,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6218f2a",
    "metadata": {},
    "source": [
-    "This notebook demonstrate how to deploy iris classifier based on Scikit Learn model using MLP "
+    "This notebook demonstrate how to create and deploy custom model which using IRIS classifier based on xgboost model into Merlin."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dcd7ae51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install --upgrade -r requirements.txt > /dev/null"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import basic\n",
+    "import merlin\n",
     "import warnings\n",
     "import os\n",
-    "\n",
-    "# Import modeling lib\n",
-    "from sklearn import svm\n",
-    "from sklearn import datasets\n",
-    "from joblib import dump\n",
-    "from sklearn.datasets import load_iris\n",
-    "\n",
-    "# Load merlin SDK\n",
-    "import merlin\n",
+    "import xgboost as xgb\n",
     "from merlin.model import ModelType\n",
-    "warnings.filterwarnings('ignore')"
+    "from sklearn.datasets import load_iris\n",
+    "warnings.filterwarnings('ignore')\n",
+    "print(merlin.__version__)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "38fd8feb",
    "metadata": {},
    "source": [
-    "## 1. Initialize MLP Resources"
+    "## 1. Initialize Merlin Resources\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "46d2cc6b",
    "metadata": {},
    "source": [
-    "### 1.1 Set MLP Server"
+    "### 1.1 Set Merlin Server"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e4e165b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,17 +72,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print MLP Server URL\n",
-    "print(\"Merlin Server URL: {}\".format(MERLIN_SERVER_URL))"
-   ]
-  },
-  {
    "cell_type": "markdown",
+   "id": "c826d621",
    "metadata": {},
    "source": [
     "### 1.2 Set Active Project\n",
@@ -112,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "813438d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +95,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "546a926d",
    "metadata": {},
    "source": [
     "### 1.3 Set Active Model\n",
     "\n",
-    "`model` represents an abstract ML model. Conceptually, `model` in MLP is similar to a class in programming language. To instantiate a `model` you'll have to create a `model_version`.\n",
+    "`model` represents an abstract ML model. Conceptually, `model` in Merlin is similar to a class in programming language. To instantiate a `model` you'll have to create a `model_version`.\n",
     "\n",
-    "Each `model` has a type, currently model type supported by MLP are: sklearn, xgboost, tensorflow, pytorch, and user defined model (i.e. pyfunc model).\n",
+    "Each `model` has a type, currently model type supported by Merlin are: sklearn, xgboost, tensorflow, pytorch, and user defined model (i.e. pyfunc model).\n",
     "\n",
     "`model_version` represents a snapshot of particular `model` iteration. You'll be able to attach information such as metrics and tag to a given `model_version` as well as deploy it as a model service.\n",
     "\n",
@@ -136,28 +112,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d2325686",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merlin.set_model(\"sklearn-sample\", ModelType.SKLEARN)"
+    "merlin.set_model(\"custom-model\", ModelType.CUSTOM)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "3c50c1d0",
    "metadata": {},
    "source": [
-    "## 2. Train and Deploy"
+    "## 2. Train and Deploy Images"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8a36d25c",
    "metadata": {},
    "source": [
-    "### 2.1 Train and Upload Model"
+    "### 2.1 Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33430c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_dir = \"xgboost-model\"\n",
+    "BST_FILE = \"model.bst\"\n",
+    "\n",
+    "iris = load_iris()\n",
+    "y = iris['target']\n",
+    "X = iris['data']\n",
+    "dtrain = xgb.DMatrix(X, label=y)\n",
+    "param = {'max_depth': 6,\n",
+    "            'eta': 0.1,\n",
+    "            'silent': 1,\n",
+    "            'nthread': 4,\n",
+    "            'num_class': 10,\n",
+    "            'objective': 'multi:softmax'\n",
+    "            }\n",
+    "xgb_model = xgb.train(params=param, dtrain=dtrain)\n",
+    "model_file = os.path.join((model_dir), BST_FILE)\n",
+    "xgb_model.save_model(model_file)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "9bb2ae92",
+   "metadata": {},
+   "source": [
+    "### 2.2 Create Model Version and Upload Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f27678f",
    "metadata": {},
    "source": [
     "`merlin.new_model_version()` is a convenient method to create a model version and start its development process. It is equal to following codes:\n",
@@ -165,100 +179,102 @@
     "```\n",
     "v = model.new_model_version()\n",
     "v.start()\n",
-    "v.log_model(model_dir=model_dir)\n",
+    "v.log_custom_model(image=\"ghcr.io/gojek/custom-model:v0.3\",model_dir=model_dir)\n",
     "v.finish()\n",
-    "```"
+    "```\n",
+    "\n",
+    "\n",
+    "This image `afif2100/caraml-dev-merlin-sample-test-custom-model:latest` is built by using this [Dockerfile](./server/dockerfile). The image contains python fast-api web service executable where the code you can find [here](./server)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "63d9b1fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = \"sklearn-model\"\n",
-    "MODEL_FILE = \"model.joblib\"\n",
-    "\n",
     "# Create new version of the model\n",
     "with merlin.new_model_version() as v:\n",
-    "\n",
-    "    # Start Model Training\n",
-    "    clf = svm.SVC(gamma='scale')\n",
-    "    iris = datasets.load_iris()\n",
-    "    X, y = iris.data, iris.target\n",
-    "    clf.fit(X, y)\n",
-    "    \n",
-    "    # Save model to local directory\n",
-    "    dump(clf, os.path.join(model_dir, MODEL_FILE))\n",
-    "    \n",
-    "    # Upload the serialized model to MLP\n",
-    "    merlin.log_model(model_dir=model_dir)"
+    "    # Upload the serialized model to Merlin\n",
+    "    merlin.log_custom_model(image=\"afif2100/caraml-dev-merlin-sample-test-custom-model:latest\", model_dir=model_dir)\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "5045593a",
    "metadata": {},
    "source": [
-    "## 2.2 Deploy Model"
+    "### 2.2 Deploy Model\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0107a735",
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint = merlin.deploy(v)"
+    "from merlin.protocol import Protocol\n",
+    "\n",
+    "endpoint = merlin.deploy(v, protocol = Protocol.HTTP_JSON)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "779c5a0c",
    "metadata": {},
    "source": [
-    "## 2.3 Send Test Request"
+    "### 2.3 Send Test Request"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c7ae3f9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test deployment\n",
+    "import requests\n",
+    "\n",
+    "# Get endpoint\n",
+    "data = {\"instances\": [[1,2,3,4], [2,1,2,4]]}\n",
+    "\n",
+    "# Send request\n",
+    "response = requests.post(endpoint.url, json=data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f167e8ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash -s \"$endpoint.url\"\n",
-    "curl -v -X POST $1 -d '{\n",
-    "  \"instances\": [\n",
-    "    [2.8,  1.0,  6.8,  0.4],\n",
-    "    [3.1,  1.4,  4.5,  1.6]\n",
-    "  ]\n",
-    "}'"
+    "curl -v -X POST $1 -H \"Content-Type: application/json\" -d '{\"instances\": [[1,2,3,4], [2,1,2,4]]}'"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c14ce243",
    "metadata": {},
    "source": [
-    "## 3.4 Delete Deployment"
+    "### 2.4 Delete Deployment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "id": "076dd1d4",
+   "metadata": {},
    "outputs": [],
    "source": [
     "merlin.undeploy(v)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -281,5 +297,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
