--- a/examples/pyfunc/Pyfunc.ipynb
+++ b/examples/pyfunc/Pyfunc.ipynb
@@ -304,9 +304,11 @@
    "outputs": [],
    "source": [
     "with merlin.new_model_version() as v:    \n",
-    "    merlin.log_pyfunc_model(model_instance=EnsembleModel(), \n",
-    "                conda_env=\"env.yaml\", \n",
-    "                artifacts={\"xgb_model\": model_1_path, \"sklearn_model\": model_2_path})"
+    "    merlin.log_pyfunc_model(\n",
+    "        model_instance=EnsembleModel(), \n",
+    "        conda_env=\"env.yaml\", \n",
+    "        artifacts={\"xgb_model\": model_1_path, \"sklearn_model\": model_2_path},\n",
+    "    )"
    ]
   },
   {
@@ -387,16 +389,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Testing PyFunc Model Server Locally"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Up until this point, you have successfully built and run your PyFunc model on the Merlin server. To have faster development iteration, you can also simulate running the PyFunc model server in your local machine, by calling `merlin.run_pyfunc_model` function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "merlin.run_pyfunc_model(\n",
+    "    model_instance=EnsembleModel(), \n",
+    "    conda_env=\"env.yaml\", \n",
+    "    artifacts={\"xgb_model\": model_1_path, \"sklearn_model\": model_2_path},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the PyFunc model server is running, you can send the requests using curl from your terminal:\n",
+    "\n",
+    "```\n",
+    "curl -X POST \"http://localhost:8080/v1/models/ensemblemodel-dev:predict\" -d '{\n",
+    "  \"instances\": [\n",
+    "    [2.8,  1.0,  6.8,  0.4],\n",
+    "    [3.1,  1.4,  4.5,  1.6]\n",
+    "  ]\n",
+    "}'\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "merlin-sdk",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
